bug fix for nested menu on mobile devices

--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -30,9 +30,17 @@
   .modal-body {
     padding: 30px 20px 40px;
 
+    @media (max-width: 767px) {
+      padding: 30px 20px;
+    }
+
     input[type="email"],input[type="text"], select {
       height: 35px;
       width: 275px;
+
+      @media (max-width: 767px) {
+        width: 100%;
+      }
     }
 
     .businessAddress {
@@ -56,6 +64,16 @@
 
         &:last-child {
           width: 46%;
+        }
+
+        @media (max-width: 767px) {
+          width: 100%;
+          margin-bottom: 15px;
+
+          &:last-child {
+            width: 100%;
+            margin-bottom: 0;
+          }
         }
       }
     }
